# pnlbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bot.py  pyproject.toml  telethon.session
src/bot/: main.py  settings.py
src/bot/db/: base.py  models.py
src/bot/db/migrations/: env.py
src/bot/db/migrations/versions/: 0001_initial.py  0002_operation_receipt_comment.py  0003_channel_post_snapshots.py  0004_channel_subscribers_history.py  0005_channel_daily_churn.py  0006_user_notify_daily_stats.py  0007_new_categories_income_expense.py
src/bot/handlers/: __init__.py  channels.py  commands.py  flow_add_operation.py
src/bot/keyboards/: channels.py  common.py
src/bot/middlewares/: __init__.py  error_logging.py  logging.py  rate_limit.py  whitelist.py
src/bot/services/: __init__.py  alerts.py  channel_stats.py  dedup.py  mtproto_client.py  parsing.py  scheduler.py  time.py
src/bot/types/: enums.py
tests/: test_dedup.py  test_parsing.py
